<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Roadworks.SensorLogger</string>

    <string name="loading_title">Loading data</string>
    <string name="loading_text">Please wait while application loads data. This should not take long</string>

    <string name="mainActivityName">Roadworks sensor logger</string>
    <string name="test">This application is intended to log accelerometer readings while the service is running. Once
        the service is stopped, packaged data in the format of CSV may be sent to any destination with standard OS
        support.
    </string>
    <string name="service_disconnected">Connecting...</string>

    <string name="service_start_command">Start</string>
    <string name="service_stop_command">Stop</string>

    <string name="showSessionList">Session list</string>
    <string name="showControlScreen">Show main screen</string>

    <string name="fileCollectedSizeMessage">Done collecting sensor data. Data written to a storage, size is {0}</string>
    <string name="questionSureToOverwriteDataFile">Data file exists, sure to discard and overwrite?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="clearFileButton">Clear the file</string>
    <string name="noData">--</string>
    <string name="timeLoggedMessage">Time logged</string>
    <string name="linesLoggedMessage">Samples logged</string>
    <string name="foregroundServiceLabel">Logging road quality data</string>
    <string name="sessionListActivityName">Session list</string>

    <string name="notification_title">Roadworks</string>

    <string name="sensor_logger_service_notification_text">Recording sensor data</string>
    <string name="sensor_logger_service_notification_waiting_GPS_text">Waiting for GPS</string>

    <string name="data_upload_service_success_ticker">Roadworks - successfully uploaded data!</string>
    <string name="data_upload_service_success_text">Uploaded sessions: %1$d</string>
    <string name="data_upload_service_fail_ticker">Roadworks - data upload failed</string>
    <string name="data_upload_service_fail_text">Data upload failed. Try retrying later?</string>

    <string name="pref_sync">Synchronization enabled?</string>
    <string name="pref_sync_summ">Controls synchronization of the road data with cloud.</string>
    <string name="pref_syncConnectionType">Which connection type to use</string>
    <string name="pref_syncConnectionTypes_default">NONE</string>

    <string name="prefActivity">Preferences</string>
    <string name="pref_api_base_url_title">API base url</string>
    <string name="prefLowPassFilterFactor">Lowpass filter factor</string>
    <string name="prefDetectionThreshold">Accel value detection threshold</string>

    <string name="manualUploadData">Upload processed data</string>
    <string name="sessionlist_empty_text">No data. Please record some sessions first</string>
    <string name="pref_bypass_gps">Bypass GPS requirement. Start listening to accelerometer events straight away.</string>
    <string name="pref_category_detector_options">Detector options</string>
    <string name="pref_category_developer_options">Developer options</string>

</resources>
